solucion de warnings